--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,12 @@
-// TODO
+.container {
+  width: 100%;
+  max-width: 700px;
+  margin: 0 auto;
+  height: 105px;
+  display: flex;
+  align-items: center;
+
+  img {
+    cursor: pointer;
+  }
+}
