--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,99 @@
-// TODO
+.container {
+  width: 100%;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 65px;
+
+  img {
+    margin-top: 80px;
+  }
+}
+
+.main {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 3rem;
+
+  .post {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+
+    h2 {
+      font-family: "Inter";
+      font-style: normal;
+      font-weight: 700;
+      font-size: 28px;
+      line-height: 34px;
+      text-align: justify;
+      letter-spacing: -0.5px;
+
+      color: var(--heading-color);
+    }
+
+    p {
+      margin-top: 0.5rem;
+      font-family: "Inter";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 22px;
+      text-align: justify;
+
+      color: var(--text-color);
+    }
+
+    .postInfoContainer {
+      display: flex;
+      gap: 1.5rem;
+      align-items: center;
+      margin-top: 1.5rem;
+
+      .postInfo {
+        display: flex;
+        align-items: center;
+
+        svg {
+          width: 20px;
+          height: 20px;
+          margin-right: 0.5rem;
+        }
+
+        p {
+          margin-top: 0;
+          font-family: "Inter";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 17px;
+          color: var(--text-secondary-color);
+        }
+      }
+    }
+  }
+}
+
+.button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  outline: inherit;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: justify;
+
+  color: #ff57b2;
+}
