--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,75 @@
-// TODO
+.container {
+  width: 100%;
+  max-width: 721px;
+  margin: 0 auto;
+
+  margin-top: 80px;
+
+  h1 {
+    padding: 0 21px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 58px;
+    letter-spacing: -0.5px;
+    color: var(--heading-color);
+  }
+}
+
+.banner {
+  height: 400px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.postInfoContainer {
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+  margin-top: 1.5rem;
+  padding: 0 21px;
+
+  .postInfo {
+    display: flex;
+    align-items: center;
+
+    svg {
+      width: 20px;
+      height: 20px;
+      margin-right: 0.5rem;
+    }
+
+    p {
+      margin-top: 0;
+      font-family: "Inter";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 17px;
+      color: var(--text-secondary-color);
+    }
+  }
+}
+
+.content {
+  margin-top: 4rem;
+  padding: 0 0 0 21px;
+}
+
+.contentHeading {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 140%;
+  text-align: justify;
+}
+
+.contentBody {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  text-align: justify;
+
+  p {
+    margin-top: 1rem;
+  }
+}
