--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,39 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-// TODO
+:root {
+  --bg-main: #1a1d23;
+  --heading-color: #f8f8f8;
+  --text-color: #d7d7d7;
+  --text-secondary-color: #bbbbbb;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--bg-main);
+  color: var(--text-color);
+  font-family: "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
